# qdp

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Readme.md  askama.toml  build.assets.mjs  build.dev.mjs  build.mjs  dev.livereload.mjs  dev.mjs  dev.sh  docker-compose.yml  package-lock.json  package.json  postcss.config.js  rollup.config.mjs  rollup.consts.mjs  rollup.entries.mjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json
api/: Cargo.toml
api/src/: lib.rs
api/src/routes/: links.rs
buildPlugins/: clean.mjs  copy.mjs  env.mjs  postcss.mjs  searchModules.mjs
database/: Cargo.toml  Readme.md
database/migrations/2023-07-02-203039_link_section/: down.sql  up.sql
database/migrations/2023-07-02-203047_link_item/: up.sql
database/src/: error.rs  lib.rs  main.rs  schema.rs
database/src/entities/links/: actions.rs  mod.rs  model.rs
database/src/models/: links.rs  mod.rs
frontend/: Cargo.toml  astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: lib.rs
frontend/src/components/: Header.astro  Link.astro
frontend/src/components/Links/: Links.astro  loadLinks.ts
frontend/src/entities/Resource/: Resource.ts
frontend/src/entities/links/: LinkItem.ts  LinkSection.ts  index.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: 404.astro  about.astro  index.astro
migrations/2023-07-02-203047_link_item/: down.sql
public/fonts/: inter.css
src/: app_state.rs  database.rs  env.d.ts  error.rs  lib.rs  lib.ts  liveReload.ts  main.rs  routes.rs  schema.rs
src/api/: mod.rs
src/api/routes/: health.rs  links.rs
src/entities/: health.rs
src/entities/links/: LinkItem.ts  LinkSection.ts  actions.rs  api.rs  link_item.rs  link_section.rs  links.hbs  links.html  links.ts  links_template.rs  links_view.rs  mod.rs  mod.ts  model.rs  routes.rs  tasks.hbs
src/entities/resource/: OrderExtension.ts  Resource.ts  index.ts
src/frontend/: assets.rs  mod.rs  routes.rs  templates.rs  templates_props.rs  templates_storage.rs
src/frontend/assets/: assets_metadata.rs  mod.rs
src/frontend/helpers/: js_log.rs  mod.rs  script.rs  stylesheet.rs
src/frontend/templates/: html_template.rs  mod.rs  script_item.html  script_item.rs  stylesheet_item.html  stylesheet_item.rs  templates_props.rs
src/hypermediaExtensions/behaviors/: index.ts  syncInputSize.ts
src/hypermediaExtensions/htmx/: disableInput.ts  index.ts
src/js_entities/: ajax.ts
src/js_entities/links/: LinkItem.ts  LinkSection.ts
src/layout/: default.hbs  footer.hbs  header.hbs
src/pages/: tasks.hbs
src/routes/: assets.rs  mod.rs
src/routes/api/: health.rs  links.rs  mod.rs
src/routes/dashboard/: dashboard_page_template.rs  mod.hbs  mod.rs  mod.ts  page.hbs  page.html
src/routes/links/: mod.rs  sections.rs
src/styles/: global.css
src/templates/: default_layout.html  mod.rs
src/templates/default_layout/: default.html  header.html
src/templates/headers/: mod.rs  preload_item.html  preload_item.rs  script_item.rs  stylesheet_item.html  stylesheet_item.rs
src/templates/links/: item_form.html  item_info.html  links_template.html  links_template.rs  mod.rs  new_section.html  section_title.html  section_title.rs
src/templates/macro/: script.html  style.html
src/templates/pages/: default_page.html  default_page.rs  mod.rs
src/utils/: ajax.ts  disableInput.ts  index.ts  isHTMLElement.ts  isHTMLInputElement.ts  liveReload.ts
web/: Cargo.toml
web/src/: main.rs
