[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
database = { path = "../database" }
tokio = { version = "1.29.1", features = ["full"] }
actix-web = { version = "4.3.1" }
log = { version = "0.4.19" }
serde = { version = "1.0.165", features = ["derive"] }
serde_json = { version = "1.0.99" }