[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0" }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
serde = { version = "1.0.165", features = ["derive"] }
log = { version = "0.4.19" }