[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
api = { path = "../api" }
frontend = { path = "../frontend" }
tokio = { version = "1.29.1", features = ["full"] }
dotenv = { version = "0.15.0" }
actix-web = { version = "4.3.1" }
env_logger = { version = "0.10.0" }
log = { version = "0.4.19" }
